--- a/composer.json
+++ b/composer.json
@@ -1,35 +1,45 @@
 {
-  "name": "noflash/supercache-bundle",
-  "type": "symfony-bundle",
-  "description": "Supercache bundle for Symfony",
-  "keywords": [
-    "cache",
-    "pages caching",
-    "static cache",
-    "supercache"
-  ],
-  "homepage": "https://github.com/kiler129/SupercacheBundle",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Grzegorz Zdanowski",
-      "email": "grzegorz@noflash.pl",
-      "role": "Developer"
+    "name": "pablok/supercache-bundle",
+    "type": "symfony-bundle",
+    "description": "Supercache bundle for Symfony",
+    "keywords": [
+        "cache",
+        "pages caching",
+        "static cache",
+        "supercache"
+    ],
+    "homepage": "https://github.com/kiler129/SupercacheBundle",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Grzegorz Zdanowski",
+            "email": "grzegorz@noflash.pl",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": ">7.0.4",
+        "symfony/framework-bundle": "~2.3|~3.0",
+        "symfony/http-kernel": "~2.3|~3.0",
+        "symfony/dependency-injection": "~2.3|~3.0",
+        "symfony/config": "~2.3|~3.0",
+        "symfony/http-foundation": "~2.3|~3.0",
+        "symfony/console": "~2.3|~3.0",
+        "symfony/filesystem": "~2.3|~3.0",
+        "beberlei/assert": "~2.0"
+    },
+    "require-dev": {
+        "pds/skeleton": "~1.0",
+        "phpunit/phpunit": "~6.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "PabloK\\SupercacheBundle\\": "src"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
     }
-  ],
-  "require": {
-    "php": ">=5.3.2",
-    "symfony/framework-bundle": "~2.3|~3.0",
-    "symfony/console": "~2.3|~3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "noFlash\\SupercacheBundle\\": ""
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.0.x-dev"
-    }
-  }
 }
