--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 * text=auto
-/src/Tests export-ignore
+/tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /README.md export-ignore
