--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 * text=auto
+
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /README.md export-ignore
 /LICENSE.md export-ignore
 /Vagrantfile export-ignore
+/.travis.yml export-ignore
