--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": ">7.0.4",
+        "php": ">=7.0.4",
         "symfony/framework-bundle": "~2.3|~3.0",
         "symfony/http-kernel": "~2.3|~3.0",
         "symfony/dependency-injection": "~2.3|~3.0",
@@ -30,11 +30,19 @@
     },
     "require-dev": {
         "pds/skeleton": "~1.0",
-        "phpunit/phpunit": "~6.3"
+        "phpunit/phpunit": "~5.7",
+        "symfony/phpunit-bridge": "^3.3",
+        "symfony/framework-bundle": "~2.5|~3.0",
+        "symfony/finder": "~2.3|~3.0"
     },
     "autoload": {
         "psr-4": {
             "PabloK\\SupercacheBundle\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "PabloK\\SupercacheBundle\\Tests\\": "tests"
         }
     },
     "extra": {
