Allow failure on php nightly builds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ php:
     - nightly
 
 env:
+    allow_failures:
+        - php: nightly
     matrix:
         - DEPENDENCIES="high"
         - DEPENDENCIES="low"
