--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,11 @@
     },
     "require-dev": {
         "pds/skeleton": "~1.0",
-        "phpunit/phpunit": "~5.7",
-        "symfony/phpunit-bridge": "^3.3",
+        "phpunit/phpunit": "^5.7",
+        "symfony/phpunit-bridge": "^2.3",
         "symfony/framework-bundle": "~2.5|~3.0",
-        "symfony/finder": "~2.3|~3.0"
+        "symfony/finder": "~2.3|~3.0",
+        "symfony/browser-kit": "~2.3|~3.0"
     },
     "autoload": {
         "psr-4": {
