--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
         - DEPENDENCIES="high"
         - DEPENDENCIES="low"
     global:
-        - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-ansi --no-progress --no-suggest"
+        - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-progress --no-suggest"
 
 before_install:
     - composer self-update
