--- a/composer.json
+++ b/composer.json
@@ -19,22 +19,22 @@
     ],
     "require": {
         "php": ">=7.0.4",
-        "symfony/framework-bundle": "~2.3|~3.0",
-        "symfony/http-kernel": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/config": "~2.3|~3.0",
-        "symfony/http-foundation": "~2.3|~3.0",
-        "symfony/console": "~2.3|~3.0",
-        "symfony/filesystem": "~2.3|~3.0",
+        "symfony/framework-bundle": "~2.7|~3.0",
+        "symfony/http-kernel": "~2.7|~3.0",
+        "symfony/dependency-injection": "~2.7|~3.0",
+        "symfony/config": "~2.7|~3.0",
+        "symfony/http-foundation": "~2.7|~3.0",
+        "symfony/console": "~2.7|~3.0",
+        "symfony/filesystem": "~2.7|~3.0",
         "beberlei/assert": "~2.0"
     },
     "require-dev": {
         "pds/skeleton": "~1.0",
         "phpunit/phpunit": "^5.7",
-        "symfony/phpunit-bridge": "^2.3",
-        "symfony/framework-bundle": "~2.5|~3.0",
-        "symfony/finder": "~2.3|~3.0",
-        "symfony/browser-kit": "~2.3|~3.0"
+        "symfony/phpunit-bridge": "^2.7",
+        "symfony/finder": "~2.7|~3.0",
+        "symfony/browser-kit": "~2.7|~3.0",
+        "symfony/css-selector": "~2.7|~3.0"
     },
     "autoload": {
         "psr-4": {
@@ -44,11 +44,12 @@
     "autoload-dev": {
         "psr-4": {
             "PabloK\\SupercacheBundle\\Tests\\": "tests"
-        }
+        },
+        "classmap": [ "tests/TestEnvironment/TestKernel.php" ]
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1.x-dev"
+            "dev-master": "0.2.x-dev"
         }
     }
 }
