Removed beberlei/assert dependency.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,7 @@
     <testsuites>
         <testsuite name="SupercacheBundle Test Suite">
             <directory>tests/Functional</directory>
+            <directory>tests/Unit</directory>
         </testsuite>
     </testsuites>
 
