--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "symfony/config": "~2.7|~3.0",
         "symfony/http-foundation": "~2.7|~3.0",
         "symfony/console": "~2.7|~3.0",
-        "symfony/filesystem": "~2.7|~3.0",
-        "beberlei/assert": "~2.0"
+        "symfony/filesystem": "~2.7|~3.0"
     },
     "require-dev": {
         "pds/skeleton": "~1.0",
