--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,6 @@
 /.gitignore export-ignore
 /README.md export-ignore
 /LICENSE.md export-ignore
+/CHANGELOG.md export-ignore
 /Vagrantfile export-ignore
 /.travis.yml export-ignore
