--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/phpunit-bridge": "^2.7",
         "symfony/finder": "~2.7|~3.0",
         "symfony/browser-kit": "~2.7|~3.0",
-        "symfony/css-selector": "~2.7|~3.0"
+        "symfony/css-selector": "~2.7|~3.0",
+        "symfony/yaml": "~2.7|~3.0"
     },
     "autoload": {
         "psr-4": {
