--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require-dev": {
         "pds/skeleton": "~1.0",
         "phpunit/phpunit": "^6.1",
-        "symfony/phpunit-bridge": "^2.7",
+        "symfony/phpunit-bridge": "^2.7|^3.0",
         "symfony/finder": "~2.7|~3.0",
         "symfony/browser-kit": "~2.7|~3.0",
         "symfony/css-selector": "~2.7|~3.0",
