--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/config": "~2.7|~3.0",
         "symfony/http-foundation": "~2.7|~3.0",
         "symfony/console": "~2.7|~3.0",
-        "symfony/filesystem": "~2.7|~3.0"
+        "symfony/filesystem": "~2.7|~3.0",
+        "voku/html-min": "^1.0.9"
     },
     "require-dev": {
         "pds/skeleton": "~1.0",
