--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ sudo: false
 git:
     depth: 1
 
+cache:
+    directories:
+        - $HOME/.composer/cache/files
+
 php:
     - '7.0'
     - '7.1'
