--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0.4",
+        "php": "^7.1.3",
         "symfony/framework-bundle": "~2.7|~3.0",
         "symfony/http-kernel": "~2.7|~3.0",
         "symfony/dependency-injection": "~2.7|~3.0",
