--- a/composer.json
+++ b/composer.json
@@ -19,23 +19,24 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "symfony/framework-bundle": "~2.7|~3.0",
-        "symfony/http-kernel": "~2.7|~3.0",
-        "symfony/dependency-injection": "~2.7|~3.0",
-        "symfony/config": "~2.7|~3.0",
-        "symfony/http-foundation": "~2.7|~3.0",
-        "symfony/console": "~2.7|~3.0",
-        "symfony/filesystem": "~2.7|~3.0",
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "symfony/http-kernel": "~2.8|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
+        "symfony/config": "~2.8|~3.0|~4.0",
+        "symfony/http-foundation": "~2.8|~3.0|~4.0",
+        "symfony/console": "~2.8|~3.0|~4.0",
+        "symfony/filesystem": "~2.8|~3.0|~4.0",
         "voku/html-min": "^1.0.9"
     },
     "require-dev": {
         "pds/skeleton": "~1.0",
-        "phpunit/phpunit": "^6.1",
-        "symfony/phpunit-bridge": "^2.7|^3.0",
-        "symfony/finder": "~2.7|~3.0",
-        "symfony/browser-kit": "~2.7|~3.0",
-        "symfony/css-selector": "~2.7|~3.0",
-        "symfony/yaml": "~2.7|~3.0"
+        "phpunit/phpunit": "^5.7.26",
+        "symfony/phpunit-bridge": "~2.8|~3.0|~4.0",
+        "symfony/finder": "~2.8|~3.0|~4.0",
+        "symfony/browser-kit": "~2.8|~3.0|~4.0",
+        "symfony/css-selector": "~2.8|~3.0|~4.0",
+        "symfony/dom-crawler": "~2.8|~3.0|~4.0",
+        "symfony/yaml": "~2.8|~3.0|~4.0"
     },
     "autoload": {
         "psr-4": {
@@ -45,8 +46,7 @@
     "autoload-dev": {
         "psr-4": {
             "PabloK\\SupercacheBundle\\Tests\\": "tests"
-        },
-        "classmap": [ "tests/TestEnvironment/TestKernel.php" ]
+        }
     },
     "extra": {
         "branch-alias": {
