--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,7 @@
     <php>
         <ini name="error_reporting" value="-1" />
         <server name="KERNEL_DIR" value="tests/TestEnvironment" />
+        <server name="KERNEL_CLASS" value="PabloK\SupercacheBundle\Tests\TestEnvironment\TestKernel" />
     </php>
 
     <testsuites>
