--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/http-foundation": "~2.8|~3.0|~4.0",
         "symfony/console": "~2.8|~3.0|~4.0",
         "symfony/filesystem": "~2.8|~3.0|~4.0",
-        "voku/html-min": "^1.0.9"
+        "voku/html-min": "~2.0"
     },
     "require-dev": {
         "pds/skeleton": "~1.0",
