--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
     - if [[ "$DEPENDENCIES" = 'low' ]]; then travis_retry composer update $DEFAULT_COMPOSER_FLAGS --prefer-lowest; fi
 
 script:
+    - vendor/bin/php-cs-fixer fix -v --diff --dry-run
     - vendor/bin/phpunit
 
 notifications:
