--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,12 @@
         "symfony/browser-kit": "~2.8|~3.0|~4.0",
         "symfony/css-selector": "~2.8|~3.0|~4.0",
         "symfony/dom-crawler": "~2.8|~3.0|~4.0",
-        "symfony/yaml": "~2.8|~3.0|~4.0"
+        "symfony/yaml": "~2.8|~3.0|~4.0",
+        "bamarni/composer-bin-plugin": "^1.2"
+    },
+    "scripts": {
+        "post-install-cmd": ["@composer bin all install --ansi -o"],
+        "post-update-cmd": ["@composer bin all update --ansi -o"]
     },
     "autoload": {
         "psr-4": {
