--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
     - if [[ "$DEPENDENCIES" = 'low' ]]; then travis_retry composer update $DEFAULT_COMPOSER_FLAGS --prefer-lowest; fi
 
 script:
-    - vendor/bin/php-cs-fixer fix -v --diff --dry-run
+    - if [[ "$DEPENDENCIES" = 'high' ]] && [[ "$TRAVIS_PHP_VERSION" = '7.2' ]]; then vendor/bin/php-cs-fixer fix -v --diff --dry-run; fi
     - vendor/bin/phpunit
 
 notifications:
