--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
         <ini name="error_reporting" value="-1" />
         <server name="KERNEL_DIR" value="tests/TestEnvironment" />
         <server name="KERNEL_CLASS" value="PabloK\SupercacheBundle\Tests\TestEnvironment\TestKernel" />
+        <env name="SHELL_VERBOSITY" value="-1" />
     </php>
 
     <testsuites>
