--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/http-foundation": "~2.8|~3.0|~4.0",
         "symfony/console": "~2.8|~3.0|~4.0",
         "symfony/filesystem": "~2.8|~3.0|~4.0",
-        "voku/html-min": "~2.0",
+        "voku/html-min": "^3.0.1",
         "voku/simple_html_dom": "^4.0.1"
     },
     "require-dev": {
