--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "symfony/css-selector": "~2.8|~3.0|~4.0",
         "symfony/dom-crawler": "~2.8|~3.0|~4.0",
         "symfony/yaml": "~2.8|~3.0|~4.0",
-        "bamarni/composer-bin-plugin": "^1.2"
+        "bamarni/composer-bin-plugin": "^1.2",
+        "symfony/debug": "~2.8|~3.0|~4.0"
     },
     "scripts": {
         "post-install-cmd": ["@composer bin all install --ansi -o"],
