--- a/composer.json
+++ b/composer.json
@@ -18,28 +18,27 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
-        "symfony/http-kernel": "~2.8|~3.0|~4.0",
-        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
         "symfony/config": "~2.8|~3.0|~4.0",
-        "symfony/http-foundation": "~2.8|~3.0|~4.0",
         "symfony/console": "~2.8|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
         "symfony/filesystem": "~2.8|~3.0|~4.0",
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "symfony/http-foundation": "~2.8|~3.0|~4.0",
+        "symfony/http-kernel": "~2.8|~3.0|~4.0",
         "voku/html-min": "^3.0.1",
         "voku/simple_html_dom": "^4.0.1"
     },
     "require-dev": {
+        "bamarni/composer-bin-plugin": "^1.2",
         "pds/skeleton": "~1.0",
         "phpunit/phpunit": "^5.7.26",
-        "symfony/phpunit-bridge": "~2.8|~3.0|~4.0",
-        "symfony/finder": "~2.8|~3.0|~4.0",
         "symfony/browser-kit": "~2.8|~3.0|~4.0",
         "symfony/css-selector": "~2.8|~3.0|~4.0",
+        "symfony/debug": "~2.8|~3.0|~4.0",
         "symfony/dom-crawler": "~2.8|~3.0|~4.0",
-        "symfony/yaml": "~2.8|~3.0|~4.0",
-        "bamarni/composer-bin-plugin": "^1.2",
-        "symfony/debug": "~2.8|~3.0|~4.0"
+        "symfony/finder": "~2.8|~3.0|~4.0",
+        "symfony/phpunit-bridge": "~2.8|~3.0|~4.0",
+        "symfony/yaml": "~2.8|~3.0|~4.0"
     },
     "scripts": {
         "post-install-cmd": ["@composer bin all install --ansi -o"],
@@ -48,6 +47,9 @@
             "vendor/bin/php-cs-fixer fix -v --diff --dry-run --ansi",
             "vendor/bin/phpstan analyse -l 7 --no-progress --ansi -c phpstan.neon src tests"
         ]
+    },
+    "config": {
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
