--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         ]
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "preferred-install": "dist"
     },
     "autoload": {
         "psr-4": {
