--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ install:
         travis_retry composer update $DEFAULT_COMPOSER_FLAGS --prefer-lowest;
       fi
     - if [[ "$DEPENDENCIES" = 'high' ]] && [[ "$TRAVIS_PHP_VERSION" = '7.2' ]]; then
-        travis_retry composer bin all install -o;
+        travis_retry composer bin all install -a --no-dev;
       fi
 
 script:
