--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         }
     ],
     "require": {
+        "php": "^7.1.3",
         "symfony/config": "~2.7|~3.2|~4.0",
         "symfony/console": "~2.7|~3.2|~4.0",
         "symfony/dependency-injection": "~2.7|~3.2|~4.0",
