--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,9 @@
         "post-install-cmd": ["@composer bin all install --ansi -o"],
         "post-update-cmd": ["@composer bin all update --ansi -o"],
         "supercache:checks": [
-            "vendor/bin/php-cs-fixer fix -v --diff --dry-run --ansi",
-            "vendor/bin/phpstan analyse -l 7 --no-progress --ansi -c phpstan.neon src tests"
+            "@composer validate --strict",
+            "@php vendor/bin/php-cs-fixer fix -v --diff --dry-run --ansi",
+            "@php vendor/bin/phpstan analyse -l 7 --no-progress --ansi -c phpstan.neon src tests"
         ]
     },
     "config": {
