Install infection on php 7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,9 @@ install:
     - if [[ "$DEPENDENCIES" = 'high' ]] && [[ "$TRAVIS_PHP_VERSION" = '7.2' ]]; then
         travis_retry composer bin all install -a --no-dev;
       fi
+    - if [[ "$DEPENDENCIES" = 'high' ]] && [[ "$TRAVIS_PHP_VERSION" = '7.1' ]]; then
+        travis_retry composer bin infection install -a --no-dev;
+      fi
 
 script:
     - if [[ "$DEPENDENCIES" = 'high' ]] && [[ "$TRAVIS_PHP_VERSION" = '7.2' ]]; then
