--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "supercache:checks": [
             "@composer validate --strict",
             "@php vendor/bin/php-cs-fixer fix -v --diff --dry-run --ansi",
+            "@php vendor/bin/phpmd src,tests text phpmd-ruleset.xml",
             "@php vendor/bin/phpstan analyse -l 7 --no-progress --ansi -c phpstan.neon src tests"
         ],
         "supercache:test:infection": [
