--- a/composer.json
+++ b/composer.json
@@ -56,13 +56,9 @@
             "@php vendor/bin/phpmd src,tests text phpmd-ruleset.xml",
             "@php vendor/bin/phpstan analyse -l 7 --no-progress --ansi -c phpstan.neon src tests"
         ],
-        "supercache:test:infection": [
-            "@php vendor/bin/infection --threads=4 --min-msi=62 --min-covered-msi=62"
-        ],
         "supercache:tests": [
             "@supercache:checks",
-            "@php vendor/bin/phpunit",
-            "@supercache:test:infection"
+            "@php vendor/bin/phpunit"
         ]
     },
     "config": {
