--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "post-update-cmd": ["@composer bin all update --ansi -o"],
         "supercache:checks": [
             "@composer validate --strict",
+            "@php vendor/bin/parallel-lint src tests",
             "@php vendor/bin/php-cs-fixer fix -v --diff --dry-run --ansi",
             "@php vendor/bin/phpmd src,tests text phpmd-ruleset.xml",
             "@php vendor/bin/phpstan analyse -l 7 --no-progress --ansi -c phpstan.neon src tests"
