--- a/tests/TestEnvironment/Resources/routing.yml
+++ b/tests/TestEnvironment/Resources/routing.yml
@@ -1,3 +1,3 @@
 index:
     path: /
-    defaults: { _controller: "index_controller:indexAction" }
+    defaults: { _controller: "index_controller::indexAction" }
