Add shortcut for CSFixer fix.

--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,9 @@
         "supercache:tests": [
             "@supercache:checks",
             "@php vendor/bin/phpunit"
+        ],
+        "supercache:fixes": [
+            "@php vendor/bin/php-cs-fixer fix --verbose --diff --ansi"
         ]
     },
     "config": {
