--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "symfony/console": "~2.8|~3.4|~4.1",
         "symfony/dependency-injection": "~2.8|~3.4|~4.1",
         "symfony/filesystem": "~2.8|~3.4|~4.1",
-        "symfony/framework-bundle": "~2.8|~3.4|~4.1",
+        "symfony/framework-bundle": "~2.8.18|~3.4|~4.1",
         "symfony/http-foundation": "~2.8|~3.4|~4.1",
         "symfony/http-kernel": "~2.8|~3.4|~4.1",
         "symfony/routing": "~2.8|~3.4|~4.1",
@@ -38,13 +38,13 @@
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.2",
         "pds/skeleton": "~1.0",
-        "phpunit/phpunit": "^5.7.26",
+        "phpunit/phpunit": "~7.4.0",
         "symfony/browser-kit": "~2.8|~3.4|~4.1",
         "symfony/css-selector": "~2.8|~3.4|~4.1",
         "symfony/debug": "~2.8|~3.4|~4.1",
         "symfony/dom-crawler": "~2.8|~3.4|~4.1",
         "symfony/finder": "~2.8|~3.4|~4.1",
-        "symfony/phpunit-bridge": "~2.8|~3.4|~4.1",
+        "symfony/phpunit-bridge": "^4.2",
         "symfony/yaml": "~2.8|~3.4|~4.1"
     },
     "scripts": {
