--- a/composer.json
+++ b/composer.json
@@ -24,28 +24,28 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "symfony/config": "~2.7|~3.2|~4.0",
-        "symfony/console": "~2.7|~3.2|~4.0",
-        "symfony/dependency-injection": "~2.7|~3.2|~4.0",
-        "symfony/filesystem": "~2.7|~3.2|~4.0",
-        "symfony/framework-bundle": "~2.7|~3.2|~4.0",
-        "symfony/http-foundation": "~2.7|~3.2|~4.0",
-        "symfony/http-kernel": "^2.7|~3.2|~4.0",
-        "symfony/routing": "~2.7|~3.2|~4.0",
+        "symfony/config": "~2.8|~3.4|~4.1",
+        "symfony/console": "~2.8|~3.4|~4.1",
+        "symfony/dependency-injection": "~2.8|~3.4|~4.1",
+        "symfony/filesystem": "~2.8|~3.4|~4.1",
+        "symfony/framework-bundle": "~2.8.18|~3.4|~4.1",
+        "symfony/http-foundation": "~2.8|~3.4|~4.1",
+        "symfony/http-kernel": "~2.8|~3.4|~4.1",
+        "symfony/routing": "~2.8|~3.4|~4.1",
         "voku/html-min": "^3.0.1",
         "voku/simple_html_dom": "^4.0.1"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.2",
         "pds/skeleton": "~1.0",
-        "phpunit/phpunit": "^5.7.26",
-        "symfony/browser-kit": "~2.7|~3.2|~4.0",
-        "symfony/css-selector": "~2.7|~3.2|~4.0",
-        "symfony/debug": "~2.7|~3.2|~4.0",
-        "symfony/dom-crawler": "~2.7|~3.2|~4.0",
-        "symfony/finder": "~2.7|~3.2|~4.0",
-        "symfony/phpunit-bridge": "~2.8|~3.2|~4.0",
-        "symfony/yaml": "~2.7|~3.2|~4.0"
+        "phpunit/phpunit": "~7.4.0",
+        "symfony/browser-kit": "~2.8|~3.4|~4.1",
+        "symfony/css-selector": "~2.8|~3.4|~4.1",
+        "symfony/debug": "~2.8|~3.4|~4.1",
+        "symfony/dom-crawler": "~2.8|~3.4|~4.1",
+        "symfony/finder": "~2.8|~3.4|~4.1",
+        "symfony/phpunit-bridge": "^4.2",
+        "symfony/yaml": "~2.8|~3.4|~4.1"
     },
     "scripts": {
         "post-install-cmd": ["@composer bin all install --ansi -o"],
@@ -60,6 +60,9 @@
         "supercache:tests": [
             "@supercache:checks",
             "@php vendor/bin/phpunit"
+        ],
+        "supercache:fixes": [
+            "@php vendor/bin/php-cs-fixer fix --verbose --diff --ansi"
         ]
     },
     "config": {
