Fix user's permissions

--- a/docker/php71/Dockerfile
+++ b/docker/php71/Dockerfile
@@ -1,9 +1,11 @@
 FROM php:7.1-cli-alpine
 
 RUN apk add --no-cache \
+        shadow \
         su-exec && \
-    docker-php-ext-install -j$(nproc) \
-        opcache
+    usermod --non-unique --uid 1000 www-data && \
+    apk del \
+        shadow
 
 RUN mkdir -p \
         /var/log/php \
