--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,7 @@
         <server name="KERNEL_DIR" value="tests/TestEnvironment" />
         <server name="KERNEL_CLASS" value="PabloK\SupercacheBundle\Tests\TestEnvironment\TestKernel" />
         <env name="SHELL_VERBOSITY" value="-1" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="max[direct]=1" />
     </php>
 
     <testsuites>
